# asp-lsp

./: .gitignore  Cargo.toml  README.md  bla.lp
.github/workflows/: publish-vscode-extension.yaml
editors/vscode/: LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
src/: document.rs  documentation.rs  main.rs
src/completion/: predicate_completion.rs
src/hover/: mod.rs
src/semantics/: encoding_semantic.rs  statement_semantic.rs
src/signature_help/: mod.rs
src/utils/: node.rs
