[package]
name = "asp-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
env_logger = "0.11.3"
log = "0.4.21"
ropey = "1.6.1"
rust-lapper = "1.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tree-sitter = "~0.20.0"
tree-sitter-clingo = "0.0.12"
